# isl-toolkit

./: .gitattributes  .gitignore  README.md  build_exe.py  entry_cli.py  entry_gui.py  gen_test_images.py  pyproject.toml  requirements.txt  run.bat  run.py  start_gui.bat
decolor_mask/: __init__.py  cli.py  core.py  pipeline.py  session.py  ui.py
decolor_mask/filters/: __init__.py  base.py  noise.py
decolor_mask/kernel/: __init__.py  gpu.py  pipeline.py
decolor_mask/kernel/filters/: __init__.py  color.py  creative.py  dcu_legacy.py  geometry.py  noise.py
decolor_mask/plugins/: __init__.py  base.py  cross_process.py  film_inversion.py  filter_pipeline.py  image_enhance.py  noise_reduction.py
decolor_mask/ui/: __init__.py  app.py  widgets.py
tests/: test_daylight_fallback.py  test_gpu.py  test_mutual_exclusion.py  test_mutual_exclusion_app.py  test_plugin_defaults.py  test_save_paths.py
