[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isl-toolkit"
version = "2.0.0"
description = "通用图像处理工具箱 — 基于 ISL 引擎架构，含负片反转、降噪、去雾、图像增强。"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "rawpy>=0.17.0",
]

[project.scripts]
isl-toolkit = "decolor_mask.cli:main"
isl-toolkit-gui = "decolor_mask.ui:main"
decolor-mask = "decolor_mask.cli:main"
decolor-mask-gui = "decolor_mask.ui:main"

[project.urls]
Source = "https://github.com/waliean/positive-negative-reverse"
